samples/_failures_safe/1761394465_99da47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73178911.c: In function ‘main’:
./samples/SAFE/__tmp_73178911.c:157:17: error: expected expression at end of input
  157 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_73178911.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73178911.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73178911.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73178911.c:157:17: error: expected declaration or statement at end of input
